--- a/lib/lang/ru.json
+++ b/lib/lang/ru.json
@@ -5,10 +5,12 @@
     "sign_in": "Войти",
     "sign_up_text": "Еще не зарегистрировались?",
     "sign_up": "Зарегестрироваться",
-    "explore": "Приятного",
+    "explore": "Альбомы",
     "search": "Поиск",
     "search_text": "Может быть вы искали:",
     "settings": "Настройки",
     "change_language": "Сменить язык",
-    "not_found": "Упс, ничего не найдено..."
+    "not_found": "Упс, ничего не найдено...",
+    "favorites": "Избранное",
+    "log_out": "ВЫЙТИ"
 }
