adding shared pref

--- a/lib/lang/ru.json
+++ b/lib/lang/ru.json
@@ -12,5 +12,6 @@
     "change_language": "Сменить язык",
     "not_found": "Упс, ничего не найдено...",
     "favorites": "Избранное",
-    "log_out": "ВЫЙТИ"
+    "log_out": "Выйти",
+    "my_profile": "Мой профиль"
 }
