--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -12,5 +12,6 @@
     "change_language": "Change Language",
     "not_found": "Oops, nothing found ...",
     "favorites": "Favorites",
-    "log_out": "LOG OUT"
+    "log_out": "Log out",
+    "my_profile": "My profile"
 }
