fix minor things

--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -13,5 +13,7 @@
     "not_found": "Oops, nothing found ...",
     "favorites": "Favorites",
     "log_out": "Log out",
-    "my_profile": "My profile"
+    "my_profile": "My profile",
+    "subscribe" : "Subscribe",
+    "subscription" : "Subscription" 
 }
