--- a/lib/lang/ru.json
+++ b/lib/lang/ru.json
@@ -13,5 +13,7 @@
     "not_found": "Упс, ничего не найдено...",
     "favorites": "Избранное",
     "log_out": "Выйти",
-    "my_profile": "Мой профиль"
+    "my_profile": "Мой профиль",
+    "subscribe" : "Подписаться",
+    "subscription" : "Подписка"
 }
